dataset/local/df_prefer_copy_over_add/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: COPY
        SourcePaths:
          - "."
        DestPath: "/app"
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: ADD
        SourcePaths:
          - "."
        DestPath: "/app"
