dataset/local/df_prefer_copy_over_add/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prefer-copy-over-add
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: prefer-copy-over-add
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: prefer-copy-over-add
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
